--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-PORT=https://carto-ecom-trial1.vercel.app/
+PORT=5000
 RAZORPAY_KEY_ID=rzp_test_xwiFtDdURfF6Cl
 RAZORPAY_SECRET_KEY=iauSuutPQGX5sAXqPN1Xkry6
 
